--- a/hrms-backend/package.json
+++ b/hrms-backend/package.json
@@ -17,6 +17,7 @@
         "exceljs": "^4.4.0",
         "express": "^4.21.2",
         "express-rate-limit": "^7.5.0",
+        "firebase-admin": "^13.6.1",
         "helmet": "^8.0.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.9.5",
