--- a/hrms-frontend/package.json
+++ b/hrms-frontend/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
